updating personal data and address
