# src/controllers/user/informationController.ts
@@ -2,7 +2,7 @@ import { Request, Response } from 'express';
 
 import serverSendingPattern from '../serverSendingPattern';
 import { validationResult } from 'express-validator';
-import { deleteUserAddressInformationService, listUserInformationService, updateInformationUserService } from '../../services/user/informationService';
+import { createAddressService, deleteUserAddressService, listUserInformationService, updateAddressService, updateInformationUserService } from '../../services/user/informationService';
 
 export async function listUserInformationController(req: Request, res: Response){
     const returnServiceInformationUser = await listUserInformationService(req.userId);
@@ -16,7 +16,7 @@ export async function listUserInformationController(req: Request, res: Response)
     return;
 }
 
-export async function uploadUserInformationController(req: Request, res: Response){
+export async function updateUserInformationController(req: Request, res: Response){
     
     const errors:any = validationResult(req);
     
@@ -25,20 +25,9 @@ export async function uploadUserInformationController(req: Request, res: Respons
         return;
     }
 
-    const { name, phone, description, street, number, neighborhood, zipCode, state, city, complement } = req.body;
+    const { name, phone } = req.body;
 
-    const address = [ description, street, number, neighborhood, zipCode, state, city, complement ];
-    
-    const someWithValue = address.some(item => item !== undefined);
-    address.pop();
-    const allUndefined = address.every(item => item !== undefined);
-    
-    if( someWithValue && !allUndefined ){
-        serverSendingPattern(res, null, 'Se você colocou algum campo de endereço, deve colocar todos os campos', null, null);
-        return;
-    }
-
-    const returnServiceStatusUpdate = await updateInformationUserService(req.userId, name, phone, description, street, number, neighborhood, zipCode, city, state, complement);
+    const returnServiceStatusUpdate = await updateInformationUserService(req.userId, name, phone);
     
     if(returnServiceStatusUpdate.error == true){
         serverSendingPattern(res, returnServiceStatusUpdate.redirect, returnServiceStatusUpdate.data, null, null);
@@ -49,8 +38,54 @@ export async function uploadUserInformationController(req: Request, res: Respons
     return;
 }
 
-export async function deleteUserAddressInformationController(req: Request, res: Response){
-    const returnServiceAddress = await deleteUserAddressInformationService(req.userId);
+export async function createAddressController(req: Request, res: Response){
+    const errors:any = validationResult(req);
+    
+    if(!errors.isEmpty()){
+        serverSendingPattern(res, null, errors.errors[0].msg, null, null);
+        return;
+    }
+
+    const { description, street, number, neighborhood, zipCode, state, city, complement } = req.body;
+
+    const returnServiceAddress = await createAddressService(req.userId, description, street, number, neighborhood, zipCode, state, city, complement);
+
+    if(returnServiceAddress.error == true){
+        serverSendingPattern(res, returnServiceAddress.redirect, returnServiceAddress.data, null, null);
+        return;
+    }
+
+    serverSendingPattern(res, null, null, returnServiceAddress.data, null);
+    return;
+} 
+
+export async function updateAddressController(req: Request, res: Response){
+    const errors:any = validationResult(req);
+    
+    if(!errors.isEmpty()){
+        serverSendingPattern(res, null, errors.errors[0].msg, null, null);
+        return;
+    }
+
+    const { hash } = req.params;
+    const { description, street, number, neighborhood, zipCode, state, city, complement } = req.body;
+
+    const returnServiceAddress = await updateAddressService(req.userId, hash, description, street, number, neighborhood, zipCode, state, city, complement);
+
+    if(returnServiceAddress.error == true){
+        serverSendingPattern(res, returnServiceAddress.redirect, returnServiceAddress.data, null, null);
+        return;
+    }
+
+    serverSendingPattern(res, null, null, returnServiceAddress.data, null);
+    return;
+}
+
+export async function deleteUserAddressController(req: Request, res: Response){
+
+    const { hash } = req.params;
+    const returnServiceAddress = await deleteUserAddressService(req.userId, hash);
+
     if(returnServiceAddress.error == true){
         serverSendingPattern(res, returnServiceAddress.redirect, returnServiceAddress.data, null, null);
         return;
